src/network_policies/test1default-fluidos-consumer-792ecd5e328a066f11c96489e19e64a288380a2f994435213cd4aa46eb126162f71966 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-792ecd5e328a066f11c96489e19e64a288380a2f994435213cd4aa46eb126162f71966
  namespace: default-fluidos-consumer-792ecd
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-792ecd
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
